@@ -1,3 +1,8 @@
+2003-11-24  Kentaro Sato <kentaro@ranvis.com>
+
+	* timidity/playmidi.c:
+	  Bug exposed by dynamic allocation of voice[] was fixed.
+
 2003-11-22  Saito <saito2@digitalme.com>
 
 	* interface/w32g_utl.c:
